WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258718
RemoteRenderingBackend operations might timeout on when GPUP is paused by the OS
https://bugs.webkit.org/show_bug.cgi?id=258718
Summary
RemoteRenderingBackend operations might timeout on when GPUP is paused by the OS
Kimmo Kinnunen
Reported
2023-06-30 02:27:34 PDT
RemoteRendederingBackend operations might timeout on when GPUP is paused by the OS For example during memory event notification
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-06-30 02:28:49 PDT
<
rdar://problem/111558491
>
Kimmo Kinnunen
Comment 2
2023-06-30 02:38:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15440
EWS
Comment 3
2023-07-03 05:00:21 PDT
Committed
265713@main
(9cbf4943fa61): <
https://commits.webkit.org/265713@main
> Reviewed commits have been landed. Closing PR #15440 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug