RemoteRenderingBackend operations might timeout on when GPUP is paused by the OS https://bugs.webkit.org/show_bug.cgi?id=258718 rdar://111558491

Reviewed by Simon Fraser.

If the OS would stop the GPUP for its reasons, a wait of 3s would
frequently time out. Currently timing out waits render the system in
inconsistent state.

Increase the default timeout to 15s to work around most issues.
Later commits should implement better procedure for unresponsive
GPU processes.

For example during memory limit notification, the OS might stop the
GPU process and write a report. This would take more than 3s.
Alternatively if the system is under stress, activating the GPUP
could take more than 3s.

* Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.h:

Canonical link: https://commits.webkit.org/265713@main